# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
diff_calc/: gendiff.py
gendiff/: constants.py  diff.py  engine.py  generate_diff.py  loader.py  output.py  parser.py  parsers.py  render.py
gendiff/format/: __init__.py  default.py  json.py  plain.py
gendiff/formatters/: json.py  plain.py  string.py
gendiff/open_file/: open_json.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: expected_result.py
tests/fixtures/expected_result/: expected_json.json
