[tool.poetry]
name = "GeVhoo_diff_calc"
version = "0.1.2"
description = "Difference calculator"
authors = ["GeVhoo <gvahrushev@mail.ru>"]
repository = "https://github.com/GeVhoo/python-project-lvl2"
packages = [
	{ include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
